--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Data-to-Model Distillation: Data-Efficient Learning Framework">
+        content="DataDAM: Efficient Dataset Distillation with Attention Matching">
   <meta name="keywords" content="Dataset Distillation">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Data-to-Model Distillation: Data-Efficient Learning Framework</title>
+  <title>DataDAM: Efficient Dataset Distillation with Attention Matching</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -101,7 +101,7 @@
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>University of Toronto,</span>
             <span class="author-block"><sup>2</sup>Royal Bank of Canada (RBC),</span>
-            <br>CVPR-DD 2024 (Oral)</span>
+            <br>ECCV 2024</span>
             <br>
             <span class="author-block"><sup>*</sup><i>Equal Contribution</i></span>
           </div>
@@ -187,10 +187,10 @@
     </div>
   </div>
 </section>
-
+<!-- 
 <section class="hero teaser">
   <div class="container is-max-desktop">
-    <div class="hero-body">
+    <div class="hero-body"> -->
       <!-- Fill in Image Link -->
       <!-- <figure style="margin-right: 2px;">
         <img src="static/img/CIFAR10SmallGrid.jpg" alt="Image 1" style="max-width: 95%;">
@@ -213,13 +213,13 @@
         <source src="./static/videos/teaser.mp4"
                 type="video/mp4">
       </video> -->
-      <h2 class="subtitle has-text-centered">
+      <!-- <h2 class="subtitle has-text-centered"> -->
         <!-- Add Caption -->
-       <i> </i> 
+       <!-- <i> </i> 
       </h2>
     </div>
   </div>
-</section>
+</section> -->
 
 
 <section class="section">
@@ -260,17 +260,13 @@
 </section>
 <!-- End Method --> 
 
-    
+<!--     
  <section class="hero is-light is-small">
   <div class="hero-body">
     <div class="container">
       <h2 class="title is-3">Visulization</h2>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-steve">
-          <!-- <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/steve.mp4"
-                    type="video/mp4">
-          </video> -->
           <figure>
             <img src="static/img/ImageNetteFullGrid_ipc10.jpg" alt="Image 1" style="max-width: 101.25%;">
             <figcaption style="text-align: center;">ImageNette (128x128)</figcaption>
@@ -305,7 +301,7 @@
             <img src="static/img/FullNoiseGrid.jpg" alt="Image 1" style="max-width: 126.25%">
             <figcaption style="text-align: center;">CIFAR10 Gaussian Noise Initialization</figcaption>
           </figure>
-        </div>
+        </div> -->
         <!-- <div class="item item-coffee">
           <video poster="" id="coffee" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/coffee.mp4"
@@ -318,10 +314,10 @@
                     type="video/mp4">
           </video>
         </div> -->
-      </div>
+      <!-- </div>
     </div>
   </div>
-</section>   
+</section>    -->
     
     <!-- Paper video. -->
     <!-- <div class="columns is-centered has-text-centered">
@@ -334,8 +330,8 @@
       </div>
     </div> -->
     <!--/ Paper video. -->
-  </div>
-</section>
+  <!-- </div>
+</section> -->
 
   <!-- Paper poster -->
 <!-- <section class="hero is-small is-light">
